--- a/web-scrumdeveloped/pom.xml
+++ b/web-scrumdeveloped/pom.xml
@@ -40,6 +40,16 @@
             <artifactId>joda-time</artifactId>
             <version>2.9.8</version>
         </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
 
         <!-- 阿里云短信服务-->
         <dependency>
