--- a/web-scrumdeveloped/src/main/resources/application.yml
+++ b/web-scrumdeveloped/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root #用户名
     url: jdbc:mysql://cdb-mw8hntaa.bj.tencentcdb.com:10027/SE-Platform?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+    hikari:
+      max-lifetime: 60000
   jpa:
     database: mysql
     hibernate:
@@ -16,3 +18,4 @@ spring:
 
 server:
   port: 9000
+
